force-app/main/default/objects/HRCFSL_IBOAR__c/HRCFSL_IBOAR__c.object-meta.xml
<CustomObject>
    <label>IBOAR</label>
    <nameField>
        <label>IBOAR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IBOAR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>