force-app/main/default/objects/HRCFSL_IBOAR__c/fields/HRCFSL_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Doc_Type__c</fullName>
    <label>Doc Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>