force-app/main/default/objects/HRCFSL_IBOAR__c/fields/HRCFSL_IB_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_IB_Status__c</fullName>
    <label>IB Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>