force-app/main/default/objects/HRCFSL_IBOAR__c/fields/HRCFSL_Rule_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Rule_Number__c</fullName>
    <label>Rule Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>