force-app/main/default/objects/HRCFSL_IBOAR__c/fields/HRCFSL_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Service_Type__c</fullName>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>