force-app/main/default/objects/HRCFSL_IBOAR__c/fields/HRCFSL_Site_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Site_Change_Type__c</fullName>
    <label>Site Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>