force-app/main/default/objects/HRCFSL_IBOAR__c/fields/HRFSL_IBOAR_ID__c.field-meta.xml
<CustomField>
    <fullName>HRFSL_IBOAR_ID__c</fullName>
    <externalId>true</externalId>
    <label>IBOAR ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>