force-app/main/default/objects/HRCFSL_IBOAR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCFSL_Doc_Type__c</columns>
    <columns>HRCFSL_IB_Status__c</columns>
    <columns>HRCFSL_Next_IB_Status__c</columns>
    <columns>HRCFSL_Site_Change_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>